Changed dependency to add new model strage

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
-			<artifactId>keycloak-model-legacy</artifactId>
+			<artifactId>keycloak-model-storage</artifactId>
 			<version>${keycloak.version}</version>
 		</dependency>
 		<dependency>
