--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,33 @@
-version: '3'
-
 services:
   keycloak:
     container_name: keycloak
-    image: quay.io/keycloak/keycloak:19.0.3-legacy
+    image: ghcr.io/identicum/keycloak:26.1
+    command: start-dev
     restart: always
     environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
-      JAVA_OPTS_APPEND: -Dkeycloak.profile.feature.admin2=disabled
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
     volumes:
-      - ./target/keycloak-rest-repo.jar:/opt/jboss/keycloak/standalone/deployments/keycloak-rest-repo.jar
-      - ./startup-scripts/:/opt/jboss/startup-scripts/
-      - ./custom-scripts/:/opt/jboss/custom-scripts/
-      - ./objects/:/opt/jboss/keycloak/objects/
+      - ./target/keycloak-rest-repo.jar:/opt/keycloak/providers/keycloak-rest-repo.jar
     ports:
       - 8080:8080
   rest-users-api:
     container_name: rest-users-api
-    image: identicum/rest-users-api
+    image: ghcr.io/identicum/rest-users-api
     pull_policy: always
     restart: always
     ports:
-      - 8081:8081
+      - 8081:8080
+  sherpa-deploy:
+    container_name: sherpa-deploy
+    image: ghcr.io/identicum/sherpa-deploy:latest
+    pull_policy: always
+    volumes:
+      - './terraform:/terraform'
+    working_dir: /terraform
+    command: 'python3 apply-config.py'
+    depends_on:
+      keycloak:
+        condition: service_healthy
+      rest-users-api:
+        condition: service_healthy
