--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,4 +1,3 @@
-name: Analyze code and create GitHub release
 on:
   push:
     branches:
@@ -20,18 +19,15 @@ jobs:
       matrix:
         language: [ 'java' ]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+      - uses: actions/checkout@v4
+      - uses: github/codeql-action/init@v2
         with:
           languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
+      - uses: github/codeql-action/autobuild@v2
+      - uses: github/codeql-action/analyze@v2
   publish:
     runs-on: ubuntu-latest
+    needs: analyze
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
